<resources>
    <string name="app_name">InstaApp</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="network_connection_error">No internet conection, please try again later</string>
    <string name="network_default_error">Something happened wrong, please try again later</string>
    <string name="server_connection_error">Not able to connect, please try again later</string>
    <string name="network_internal_error">Our system got an error, please try again later</string>
    <string name="network_server_not_available">Services are under construction, please try again later</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="signup_name_hint">Enter your full name</string>
    <string name="signup_email_hint">Enter your email</string>
    <string name="signup_password_hint">Enter your password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="login_with_email">Login with Email</string>

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_photo">Add Photos</string>
    <string name="menu_profile">Profile</string>
    <string name="post_like_label">%1d Likes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change Photo</string>

    <!--edit profile-->
    <string name="profile_name">Name</string>
    <string name="profile_email">Email Address</string>
    <string name="profile_private_info">Private Information</string>
    <string name="profile_bio">Bio</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Try again</string>
</resources>
